# ProfBlocker

./: .gitignore  LICENSE  README.md  camera.py  pyproject.toml
core/: camera.py  databasemanager.py  facerecognizer.py  gui.py  test.py
tests/: test_camera.py
