[project]
name = "profblocker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "face-recognition>=1.3.0",
    "face-recognition-models>=0.3.0",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pip>=26.1",
    "pytest>=9.0.3",
    "setuptools>=82.0.1",
]
